# MaierSteinSolverRepo

./: .gitignore  .nojekyll  README.md  about.html  getting-started.html  index.html  notes-by-date.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
docs/: _quarto.yml  getting-started.qmd  index.qmd  notes-by-date.qmd
docs/.quarto/idx/: getting-started.qmd.json  index.qmd.json
docs/.quarto/project-cache/: deno-kv-file
docs/.quarto/xref/: 9d684e74  INDEX
docs/_site/: notes-by-date.html  sitemap.xml
docs/docs/: about.html  getting-started.html  index.html  notes-by-date.html  search.json
notebooks/: notebook.ipynb
src/MaierSteinSolver/: __init__.py  config.py  dataset.py  features.py  plots.py
src/MaierSteinSolver/modeling/: pinn.py  predict.py  train.py
